# mcp-copilotcli-history

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml
src/mcp_copilotcli_history/: server.py
src/mcp_server_copilot_history/: __main__.py
tests/: __init__.py  test_server.py
