[project]
name = "mcp-server-copilot-history"
version = "0.1.0"
description = "MCP server for searching GitHub Copilot conversation history"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Michael Lawlor" }]
keywords = ["mcp", "copilot", "history", "search", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mcp-server-copilot-history = "mcp_server_copilot_history:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-server-copilot-history"
Repository = "https://github.com/yourusername/mcp-server-copilot-history"
Issues = "https://github.com/yourusername/mcp-server-copilot-history/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_copilot_history"]
